# mediapipe_library

./: .gitignore  WORKSPACE  build_library
library_demo/: .clang-format  .clnag-tidy  .gitignore  CMakeLists.txt
library_demo/include/: mediapipe_library.h
library_demo/include/mediapipe/: mediapipe_api.h  mediapipe_interface.h  mediapipe_log.h  mediapipe_struct.h
library_demo/src/: face_blendshape.cpp  face_detect.cpp  face_mesh.cpp  hand_track.cpp  holistic_track.cpp  pose_track.cpp
mediapipe/examples/desktop/face_blendshape/: BUILD
mediapipe/graphs/face_blendshape/: BUILD  face_blendshape_desktop_live.pbtxt
mediapipe/graphs/face_mesh/: face_mesh_desktop_live.pbtxt
mediapipe/graphs/hand_tracking/: hand_tracking_desktop_live_gpu.pbtxt
mediapipe/modules/face_blendshape/: BUILD
